2016-07-22  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal.c (ee_esim_target_p): Support "sim".

2016-07-22  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal-data-local.h (e_target_ops):
	Add load_group, start_group, get_raw_pointer, alloc, shm_alloc
	& free.

2016-07-22  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal-data-local.h (e_platform_t): Move
	target_ops member...
	* e-hal/src/epiphany-hal.c: ... from here.
	(e_finalize): Use e_platform.target_ops.
	(e_open): Likewise.
	(e_close): Likewise.
	(ee_read_word): Likewise.
	(ee_write_word): Likewise.
	(ee_read_buf): Likewise.
	(ee_write_buf): Likewise.
	(ee_read_reg): Likewise.
	(ee_write_reg): Likewise.
	(ee_mread_word): Likewise.
	(ee_mwrite_word): Likewise.
	(ee_mread_buf): Likewise.
	(ee_mwrite_buf): Likewise.
	(e_reset_system): Likewise.

2016-07-22  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal-data.h: Include
	epiphany-hal-data-local.h after e_bool_t declaration.
	* e-hal/src/epiphany-hal-data-local.h: Include
	epiphany-hal-data.h

2016-07-13  Ola Jeppsson  <ola@adapteva.com>

	* src/epiphany-hal-data-local.h (e_chip_db_t): Move here from
	epiphany-hal.c
	(E_CHIP_DB_NUM_CHIP_VERSIONS): Move define here from
	epiphany-hal.c. Add E_ prefix.
	(e_chip_params_table): Add declaration.
	* src/epiphany-hal.c (e_chip_db_t): Move to
	epiphany-hal-data-local.h
	(CHIP_DB_NUM_CHIP_VERSIONS): Move to epiphany-hal-data-local.h.
	(chip_params_table): Rename to ...
	(e_chip_params_table): ... this.
	(ee_set_chip_params): Change from chip_params_table to
	e_chip_params_table. Change from CHIP_DB_NUM_CHIP_VERSIONS to
	E_CHIP_DB_NUM_CHIP_VERSIONS.
	* src/esim-target.c (ee_populate_platform_esim): Change from
	chip_params_table to e_chip_params_table.

2016-06-15  Ola Jeppsson  <ola@adapteva.com>

	* configure.ac: Check for ESIM and PAL headers and libraries
	before enabling the targets in the e-hal build.

2016-06-13  Ola Jeppsson  <ola@adapteva.com>
